Metaverse shouldn't store the path because the domain server handles that

--- a/frontend/src/app/ui/edit-domain/edit-domain.component.html
+++ b/frontend/src/app/ui/edit-domain/edit-domain.component.html
@@ -42,7 +42,7 @@ display: flex; vertical-align: middle;"
 		</mat-error>
 	</mat-form-field>
 
-	<mat-form-field style="width: 100%;">
+	<!-- <mat-form-field style="width: 100%;">
 		<input matInput placeholder="Path" required formControlName="path" />
 		<mat-error *ngIf="form.hasError('required', 'path')">
 			Path is required
@@ -50,7 +50,7 @@ display: flex; vertical-align: middle;"
 		<mat-error *ngIf="form.hasError('maxLength', 'path')">
 			Path is too long
 		</mat-error>
-	</mat-form-field>
+	</mat-form-field> -->
 
 	<app-image-picker
 		name="thumbnail"
