--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -24,6 +24,10 @@ body {
 	background-color: mat-color($mat-red, 500) !important;
 }
 
+.bg-success {
+	background-color: mat-color($mat-light-green, 500) !important;
+}
+
 h1,
 h2,
 h3 {
