Added "about us" but is unfinished

--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -37,6 +37,10 @@
 					<mat-icon>bookmarks</mat-icon> Docs
 				</a>
 
+				<button class="menu-item" mat-button routerLink="/about-us">
+					<mat-icon>people_alt</mat-icon> About us
+				</button>
+
 				<!-- <button class="menu-item" mat-button routerLink="/explore">
 					<mat-icon>public</mat-icon> Explore
 				</button> -->
