--- a/frontend/src/app/about-us/about-us.component.scss
+++ b/frontend/src/app/about-us/about-us.component.scss
@@ -1,10 +1,25 @@
 .contributor {
 	display: inline-block;
+	background-color: mix(#000, #fff, 5%);
+	position: relative;
+	width: 32px;
+	height: 32px;
+	margin: 2px;
+	overflow: hidden;
+	border-radius: 50%;
 
-	img {
-		width: 32px;
-		height: 32px;
-		border-radius: 50%;
-		padding: 2px;
+	.initials {
+		text-align: center;
+		margin: 0;
+		margin-top: 6px;
+		font-weight: 300;
+	}
+
+	.image {
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
 	}
 }
