Initial My Files ui

--- a/frontend/src/app/header/header.component.html
+++ b/frontend/src/app/header/header.component.html
@@ -109,6 +109,9 @@
 				</ng-container>
 
 				<mat-menu #appMenu="matMenu">
+					<button mat-menu-item routerLink="user/files">
+						<mat-icon>folder</mat-icon> My files
+					</button>
 					<button mat-menu-item routerLink="user/worlds">
 						<mat-icon>public</mat-icon> My worlds
 					</button>
