--- a/frontend/src/app/user/files/folder-view/folder-view.component.html
+++ b/frontend/src/app/user/files/folder-view/folder-view.component.html
@@ -3,6 +3,8 @@
 		*ngFor="let folder of folder.folders"
 		class="item folder"
 		(click)="onFolderClick.emit(folder)"
+		oncontextmenu="return false;"
+		(contextmenu)="onItemContextMenu('folder', folder, $event)"
 	>
 		<div class="contents">
 			<mat-icon class="icon">folder</mat-icon>
@@ -16,15 +18,27 @@
 		*ngFor="let file of folder.files"
 		(click)="onItemClick(file)"
 		oncontextmenu="return false;"
-		(contextmenu)="onItemContextMenu(file, $event)"
+		(contextmenu)="onItemContextMenu('file', file, $event)"
 	>
 		<div class="thumbnail">
 			<mat-icon class="icon">{{ file.icon }}</mat-icon>
 			<div
-				class="image"
+				class="preview"
 				*ngIf="file.type == 'image'"
-				[style.backgroundImage]="'url(' + file.url + ')'"
+				[style.backgroundImage]="
+					'url(' + file.url + '?' + previewCache + ')'
+				"
 			></div>
+			<video
+				class="preview"
+				*ngIf="file.type == 'video'"
+				style="object-fit: cover;"
+				autoplay
+				loop
+				mute
+			>
+				<source [src]="file.url + '?' + previewCache" />
+			</video>
 		</div>
 		<div class="contents">
 			<mat-icon class="icon">{{ file.icon }}</mat-icon>
@@ -42,23 +56,25 @@
 	[style.left]="contextMenu.x + 'px'"
 	oncontextmenu="return false;"
 >
-	<div class="info">
-		{{ contextMenu.file.name }}
-		<br />
-		<span style="opacity: 0.6;">
-			{{ formatBytes(contextMenu.file.size) }}
-		</span>
-	</div>
-	<button mat-button (click)="onContextMenuCopyUrl()">
-		<mat-icon>link</mat-icon>
-		<ng-container *ngIf="!contextMenu.copied">
-			Copy URL to clipboard
-		</ng-container>
-		<ng-container *ngIf="contextMenu.copied">
-			Copied!
-		</ng-container>
-	</button>
-	<hr />
+	<ng-container *ngIf="contextMenu.type == 'file'">
+		<div class="info">
+			{{ contextMenu.file.name }}
+			<br />
+			<span style="opacity: 0.6;">
+				{{ formatBytes(contextMenu.file.size) }}
+			</span>
+		</div>
+		<button mat-button (click)="onContextMenuCopyUrl()">
+			<mat-icon>link</mat-icon>
+			<ng-container *ngIf="!contextMenu.urlCopied">
+				Copy URL to clipboard
+			</ng-container>
+			<ng-container *ngIf="contextMenu.urlCopied">
+				Copied!
+			</ng-container>
+		</button>
+		<mat-divider></mat-divider>
+	</ng-container>
 	<button mat-button disabled>
 		<mat-icon>folder</mat-icon>
 		Move
@@ -67,13 +83,26 @@
 		<mat-icon>create</mat-icon>
 		Rename
 	</button>
-	<button mat-button (click)="onContextMenuDownload()">
+	<button
+		mat-button
+		(click)="onContextMenuDownload()"
+		*ngIf="contextMenu.type == 'file'"
+	>
 		<mat-icon>get_app</mat-icon>
 		Download
 	</button>
-	<hr />
-	<button mat-button disabled>
+	<mat-divider></mat-divider>
+	<button
+		mat-flat-button
+		(click)="onContextMenuDelete()"
+		[color]="contextMenu.areYouSureDelete ? 'warn' : ''"
+	>
 		<mat-icon>delete</mat-icon>
-		Delete
+		{{ !contextMenu.areYouSureDelete ? "Delete" : "ARE YOU SURE?" }}
 	</button>
+	<mat-progress-bar
+		*ngIf="contextMenu.loading"
+		mode="indeterminate"
+		style="margin-bottom: -8px; margin-top: 8px;"
+	></mat-progress-bar>
 </div>
