--- a/frontend/src/app/user/files/folder-view/folder-view.component.scss
+++ b/frontend/src/app/user/files/folder-view/folder-view.component.scss
@@ -76,16 +76,20 @@
 					opacity: 0.2;
 				}
 
-				.image {
+				.preview {
 					position: absolute;
 					top: 0;
 					right: 0;
 					bottom: 0;
 					left: 0;
 
+					background-color: #000;
 					background-size: cover;
 					background-position: center;
 					background-repeat: no-repeat;
+
+					width: 100%;
+					height: 100%;
 				}
 			}
 
@@ -109,13 +113,14 @@
 		padding: 8px 16px;
 	}
 
-	hr {
-		border-color: rgba(#000, 0.1);
+	mat-divider {
+		margin: 8px 0;
 	}
 
 	button {
 		text-align: left;
 		display: block;
 		width: 100%;
+		border-radius: 0;
 	}
 }
