--- a/frontend/src/app/user/files/upload/upload.component.scss
+++ b/frontend/src/app/user/files/upload/upload.component.scss
@@ -1,13 +1,28 @@
-.files {
+.fluid {
+	margin-left: -24px;
+	width: calc(100% + 48px);
+}
+
+.uploads {
 	max-height: 60vh;
 	overflow: auto;
+
+	.drag-over {
+		text-align: center;
+		border: dashed 2px rgba(#000, 0.25);
+		color: rgba(#000, 0.5);
+		border-radius: 4px;
+		padding: 32px 0;
+		margin: 0 24px;
+		cursor: pointer;
+	}
 
 	.file {
 		display: flex;
 		align-items: center;
-		padding: 4px 0;
+		padding: 4px 12px;
 
-		&:nth-child(even) {
+		&:nth-child(odd) {
 			background: rgba(#000, 0.05);
 		}
 
