Scrolling works again

--- a/frontend/src/app/user/files/files.component.scss
+++ b/frontend/src/app/user/files/files.component.scss
@@ -24,7 +24,10 @@ $sidebarWidth: 300px;
 	top: $headerHeight;
 	bottom: 0;
 	left: $sidebarWidth;
-	right: 16px;
+	right: 0;
+
+	padding-right: 16px;
+	overflow: auto;
 
 	.breadcrumbs {
 		display: flex;
