--- a/frontend/src/app/user/files/upload/upload.component.html
+++ b/frontend/src/app/user/files/upload/upload.component.html
@@ -1,9 +1,9 @@
 <input hidden (change)="onFilesChanged()" #filesInput type="file" multiple />
 
 <h2 *ngIf="uploads.length != 0" style="margin-top: 0;">
-	<b>{{ utilsService.displayPlural(getUnuploaded().length, "file") }}</b>
+	<b>{{ utilsService.displayPlural(uploads.length, "file") }}</b>
 	of
-	<b>{{ utilsService.formatBytes(totalSize) }}</b>
+	<b>{{ utilsService.formatBytes(getTotalSize()) }}</b>
 	{{ !uploading ? "to upload" : "uploading..." }}
 </h2>
 <mat-card
@@ -35,13 +35,14 @@
 	</div>
 	<div class="file" *ngFor="let upload of uploads">
 		<mat-progress-spinner
-			*ngIf="uploading && !upload.uploaded"
+			*ngIf="uploading && upload.state == 'uploading'"
 			class="icon"
-			mode="indeterminate"
+			[value]="upload.progress"
+			[mode]="upload.progress == 100 ? 'indeterminate' : 'determinate'"
 			diameter="24"
 		></mat-progress-spinner>
 		<mat-icon
-			*ngIf="uploading && upload.uploaded"
+			*ngIf="uploading && upload.state == 'uploaded'"
 			class="icon"
 			style="color: #e91e63; width: 32px; height: 32px; font-size: 32px;"
 		>
@@ -82,6 +83,15 @@
 </div>
 <mat-progress-bar
 	*ngIf="uploading"
-	mode="indeterminate"
+	[value]="getProgressValue()"
 	style="margin-top: 24px;"
 ></mat-progress-bar>
+<div *ngIf="uploading" style="margin-top: 8px; display: flex;">
+	<div>{{ getProgressValue().toFixed(0) }}%</div>
+	<div style="flex-grow: 1;"></div>
+	<div>
+		{{ utilsService.formatBytes(getUploadedSize()) }}
+		/
+		{{ utilsService.formatBytes(getTotalSize()) }}
+	</div>
+</div>
