--- a/frontend/src/app/user/files/input/input.component.scss
+++ b/frontend/src/app/user/files/input/input.component.scss
@@ -12,3 +12,10 @@
 		margin-left: 8px;
 	}
 }
+
+.loading {
+	margin-top: 24px;
+	margin-bottom: -24px;
+	margin-left: -24px;
+	width: calc(100% + 48px);
+}
