Don't scream ARE YOU SURE

--- a/frontend/src/app/user/files/folder-view/folder-view.component.html
+++ b/frontend/src/app/user/files/folder-view/folder-view.component.html
@@ -113,7 +113,7 @@
 		[color]="contextMenu.areYouSureDelete ? 'warn' : ''"
 	>
 		<mat-icon>delete</mat-icon>
-		{{ !contextMenu.areYouSureDelete ? "Delete" : "ARE YOU SURE?" }}
+		{{ !contextMenu.areYouSureDelete ? "Delete" : "Are you sure?" }}
 	</button>
 	<mat-progress-bar
 		*ngIf="contextMenu.loading"
