--- a/frontend/src/app/user/files/folder-view/folder-view.component.html
+++ b/frontend/src/app/user/files/folder-view/folder-view.component.html
@@ -82,13 +82,21 @@
 		</button>
 		<mat-divider></mat-divider>
 	</ng-container>
-	<button mat-button disabled>
+	<button
+		mat-button
+		(click)="onContextMenuMoveFile()"
+		*ngIf="contextMenu.type == 'file'"
+	>
+		<mat-icon>folder</mat-icon>
+		Move
+	</button>
+	<button mat-button disabled *ngIf="contextMenu.type == 'folder'">
 		<mat-icon>folder</mat-icon>
 		Move
 	</button>
 	<button
 		mat-button
-		(click)="onContextMenuRename()"
+		(click)="onContextMenuRenameFile()"
 		*ngIf="contextMenu.type == 'file'"
 	>
 		<mat-icon>create</mat-icon>
