--- a/frontend/src/app/admin/admin.component.html
+++ b/frontend/src/app/admin/admin.component.html
@@ -110,6 +110,19 @@
 						</td>
 					</ng-container>
 
+					<ng-container matColumnDef="impersonate">
+						<th mat-header-cell *matHeaderCellDef></th>
+						<td mat-cell *matCellDef="let element">
+							<button
+								mat-flat-button
+								color="warn"
+								(click)="impersonateUser(element)"
+							>
+								Impersonate
+							</button>
+						</td>
+					</ng-container>
+
 					<tr mat-header-row *matHeaderRowDef="usersCols"></tr>
 					<tr mat-row *matRowDef="let row; columns: usersCols"></tr>
 				</table>
