--- a/frontend/src/app/user/files/folder-view/folder-view.component.html
+++ b/frontend/src/app/user/files/folder-view/folder-view.component.html
@@ -82,34 +82,18 @@
 		</button>
 		<mat-divider></mat-divider>
 	</ng-container>
-	<button
-		mat-button
-		(click)="onContextMenuMoveFile()"
-		*ngIf="contextMenu.type == 'file'"
-	>
+	<button mat-button (click)="onContextMenuMove()">
 		<mat-icon>folder</mat-icon>
 		Move
 	</button>
-	<button mat-button disabled *ngIf="contextMenu.type == 'folder'">
-		<mat-icon>folder</mat-icon>
-		Move
-	</button>
-	<button
-		mat-button
-		(click)="onContextMenuRenameFile()"
-		*ngIf="contextMenu.type == 'file'"
-	>
-		<mat-icon>create</mat-icon>
-		Rename
-	</button>
-	<button mat-button disabled *ngIf="contextMenu.type == 'folder'">
+	<button mat-button (click)="onContextMenuRename()">
 		<mat-icon>create</mat-icon>
 		Rename
 	</button>
 	<button
 		mat-button
+		*ngIf="contextMenu.type == 'file'"
 		(click)="onContextMenuDownload()"
-		*ngIf="contextMenu.type == 'file'"
 	>
 		<mat-icon>get_app</mat-icon>
 		Download
