--- a/frontend/src/app/header/header.component.scss
+++ b/frontend/src/app/header/header.component.scss
@@ -24,6 +24,77 @@
 	}
 }
 
+.apps-button {
+	padding: 0;
+	min-width: 0;
+	line-height: 16px;
+
+	.material-icons {
+		$size: 32px;
+		font-size: $size;
+		width: $size;
+		height: $size;
+	}
+}
+
+.apps-menu {
+	width: 280px;
+	max-width: 280px;
+	text-align: center;
+
+	.app-button {
+		width: 33.333333%;
+		text-align: center;
+		overflow: hidden;
+		padding-top: 8px;
+		vertical-align: top;
+
+		.material-icons {
+			$size: 36px;
+			font-size: $size;
+			width: $size;
+			height: $size;
+
+			margin: 0 auto;
+			display: block;
+		}
+	}
+
+	hr {
+		border-top: solid 1px rgba(#000, 0.08);
+	}
+
+	a {
+		color: #000;
+		text-decoration: none;
+	}
+
+	.user-image {
+		$size: 64px;
+		width: $size;
+		height: $size;
+
+		margin: 0 auto;
+		display: block;
+
+		margin-top: 16px;
+		margin-bottom: 8px;
+	}
+
+	h2,
+	p {
+		margin: 2px 0;
+	}
+
+	.user-menu {
+		padding: 16px 0;
+
+		button {
+			margin: 0 8px;
+		}
+	}
+}
+
 .admin-button {
 	padding: 0;
 	line-height: 1.5em;
