--- a/frontend/src/app/header/header.component.scss
+++ b/frontend/src/app/header/header.component.scss
@@ -1,39 +1,82 @@
-// .white-button {
-// 	@include mdc-button-container-fill-color(#fff);
-// 	@include mdc-button-ink-color(#000);
-// }
+$mobileMaxWidth: 1160px;
 
-.user-image {
-	width: 36px;
-	height: 36px;
-	border-radius: 50%;
-}
+.toolbar {
+	min-height: 64px;
 
-.menu-item {
-	// margin: 0 4px;
-
-	img,
-	mat-icon {
-		margin-right: 4px;
+	.mobile-only {
+		display: none;
+		@media (max-width: $mobileMaxWidth) {
+			display: initial;
+		}
 	}
 
-	&.white {
-		background: #fff;
-		color: #000;
-		margin: 0 4px;
-	}
-}
+	.mat-toolbar-row {
+		height: 64px;
+		max-width: 1600px;
+		margin: 0 auto;
 
-.apps-button {
-	padding: 0;
-	min-width: 0;
-	line-height: 16px;
+		.mobile-menu {
+			flex-grow: 1;
+			display: flex;
+			align-items: center;
+			overflow: hidden;
+			transition: all 200ms cubic-bezier(0.4, 0, 0.2, 1);
 
-	.material-icons {
-		$size: 32px;
-		font-size: $size;
-		width: $size;
-		height: $size;
+			@media (max-width: $mobileMaxWidth) {
+				flex-direction: column;
+				align-items: center;
+				padding: 8px 0;
+
+				position: fixed;
+				top: 64px;
+				left: 0;
+				right: 0;
+				width: 100%;
+				height: auto;
+				max-height: 300px;
+
+				background: darken(#e91e63, 10%);
+				z-index: 10;
+
+				.menu-item {
+					margin: 4px 0;
+				}
+			}
+		}
+
+		.menu-item {
+			// margin: 0 4px;
+
+			img,
+			mat-icon {
+				margin-right: 4px;
+			}
+
+			&.white {
+				background: #fff;
+				color: #000;
+				margin: 0 4px;
+			}
+		}
+
+		.user-image {
+			width: 36px;
+			height: 36px;
+			border-radius: 50%;
+		}
+
+		.apps-button {
+			padding: 0;
+			min-width: 0;
+			line-height: 16px;
+
+			.material-icons {
+				$size: 32px;
+				font-size: $size;
+				width: $size;
+				height: $size;
+			}
+		}
 	}
 }
 
@@ -93,10 +136,4 @@
 			margin: 0 8px;
 		}
 	}
-}
-
-.admin-button {
-	padding: 0;
-	line-height: 1.5em;
-	min-width: 48px;
 }
